# airtype

./: .gitignore  README.md  config.example.toml  config.schema.json  config.toml  run.sh
backend/: requirements.txt  settings.json
backend/app/: main.py  whisper.py
backend/app/static/: index.html
frontend/: floating_dialog.py  key_listener.py  main.py  pyproject.toml  tray_icon.py
frontend/macos/: Package.swift  README.md
frontend/macos/Sources/AirTypeMac/: AudioRecorder.swift  BackendProcessManager.swift  ConfigStore.swift  FloatingPanelController.swift  PasteController.swift
scripts/: build-localapp-macos.sh  build-macos-app.sh  generate-airtype-icon.swift  generate-config-from-schema.py  setup.sh  start-backend.sh  start-webui.sh
source/localapp/macos/: README.md
source/localapp/macos/Sources/AirTypeMac/: AirTypeCoordinator.swift  AirTypeIcon.swift  AirTypeMacApp.swift  AudioRecorder.swift  BackendClient.swift  BackendProcessManager.swift  ConfigStore.swift  DataExtensions.swift  FloatingPanelController.swift  HotkeyMonitor.swift  Logger.swift  PasteController.swift  StatusIcon.swift
source/webui/: requirements.txt  settings.json
source/webui/app/: config_schema.py  main.py  post_weaver.py  service_log.py  whisper.py
source/webui/app/static/: index.html
source/webui/frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
source/webui/frontend/src/: App.tsx  main.tsx  styles.css  theme.ts
source/webui/tests/: test_post_weaver.py
source/webui/tests/fixtures/: test_post_weaver_test01_data.json
(+104 files in other folders)
